[gd_scene load_steps=3 format=2]

[ext_resource path="res://pause-manager-v3/examples/scripts/example_pause_menu_scene.gd" type="Script" id=1]
[ext_resource path="res://pause-manager-v3/prefabs/pause_manager.tscn" type="PackedScene" id=2]

[node name="Example Pause Menu Scene" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PauseManager" parent="." instance=ExtResource( 2 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 128.0
text = "PAUSE MANAGER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Button" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -152.0
margin_right = 64.0
margin_bottom = -88.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Menu" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -172.0
margin_right = 128.0
margin_bottom = 84.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Pause Menu Title" type="Label" parent="Pause Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 64.0
text = "PAUSE MENU"
align = 1
valign = 1

[node name="Resume Button" type="Button" parent="Pause Menu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -24.0
margin_right = 64.0
margin_bottom = 24.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Scene Button" type="Button" parent="Pause Menu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -88.0
margin_right = 64.0
margin_bottom = -40.0
text = "Main Scene"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggle" from="PauseManager" to="." method="_on_PauseManager_toggle"]
[connection signal="pressed" from="Pause Button" to="." method="_on_Pause_Button_pressed"]
[connection signal="pressed" from="Pause Menu/Resume Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="Pause Menu/Main Scene Button" to="." method="_on_Main_Scene_Button_pressed"]
